--- a/register.html
+++ b/register.html
@@ -136,9 +136,10 @@
                 <input type="text" name="companyName" id="companyName"class="input-style"required><br><br>
 
                 <label for="addrcompany"style="color: aliceblue;">ที่อยู่ที่ทำงาน &nbsp;&nbsp;</label>
-                <input type="text" name="addrcompany" id="addrcompany"class="input-style"required>
+                <textarea cols="85" rows="2" name="addrcompany" id="addrcompany"class="input-style"required></textarea><br><br>
+                <!-- <input type="text" name="addrcompany" id="addrcompany"class="input-style"required> -->
 
-                <label for="zipcodecompany"style="color: aliceblue;">&nbsp;&nbsp;รหัสไปรษณีย์ &nbsp;&nbsp;</label>
+                <label for="zipcodecompany"style="color: aliceblue;">รหัสไปรษณีย์ &nbsp;&nbsp;</label>
                 <input type="text" name="postalCodeCompany" id="postalCodeCompany"class="input-style"required oninput="validationInputNumber(event)">
 
                 <label for="telcompany"style="color: aliceblue;">&nbsp;&nbsp;โทรศัพท์ &nbsp;&nbsp;</label>
